--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
-/* إعادة تعيين المسافات والحواف */
+/* --------- Reset --------- */
 * { margin:0; padding:0; box-sizing:border-box; }
 
-/* إعدادات عامة للجسم والخط */
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: #f9f9f9;
@@ -18,9 +17,9 @@ body {
   min-height:100vh;
 }
 
-/* القائمة الجانبية */
+/* --------- Sidebar --------- */
 .sidebar {
-  width: 250px;
+  width: 280px;
   background: #1e1e1e;
   color: #fff;
   flex-shrink:0;
@@ -46,7 +45,24 @@ body {
 }
 .sidebar a:hover { color:#1976d2; }
 
-/* المحتوى الرئيسي */
+/* --------- Input Video Section --------- */
+.sidebar input, .sidebar button {
+  width: 100%;
+  padding:8px 10px;
+  margin-bottom:10px;
+  border-radius:5px;
+  border:none;
+}
+.sidebar button {
+  background-color:#1976d2;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
+  transition: background-color 0.3s ease;
+}
+.sidebar button:hover { background-color:#0d47a1; }
+
+/* --------- Main Content --------- */
 main {
   flex-grow:1;
   padding:20px 40px;
@@ -54,7 +70,7 @@ main {
   margin:auto;
 }
 
-/* الهيدر */
+/* --------- Header --------- */
 header {
   display:flex;
   align-items:center;
@@ -71,7 +87,7 @@ header img {
 header div h1 { font-size:2.8rem; color:#0d47a1; margin-bottom:10px; }
 header div p { font-size:1.3rem; }
 
-/* الأقسام */
+/* --------- Sections --------- */
 section { margin-bottom:60px; }
 section h2 {
   color: #1976d2;
@@ -82,7 +98,7 @@ section h2 {
   padding-bottom:5px;
 }
 
-/* تصميم الصناديق */
+/* --------- Boxes --------- */
 .features, .videos, .resources {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
@@ -116,10 +132,9 @@ section h2 {
 }
 .box a.button:hover { background-color:#0d47a1; }
 
-/* إعداد iframe للفيديو */
 iframe { width:100%; height:315px; border-radius:12px; }
 
-/* الفوتر */
+/* --------- Footer --------- */
 footer {
   background: #1e1e1e;
   color: #fff;
@@ -129,7 +144,6 @@ footer {
 }
 footer a { color:#1976d2; text-decoration:none; }
 
-/* استجابة الشاشة */
 @media(max-width:992px){
   body { flex-direction:column; }
   .sidebar { width:100%; height:auto; position:relative; }
@@ -140,7 +154,7 @@ footer a { color:#1976d2; text-decoration:none; }
 </head>
 <body>
 
-<!-- القائمة الجانبية -->
+<!-- ---------- Sidebar ---------- -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -149,11 +163,16 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#resources">Resources</a>
   <a href="#egyptian">Egyptian Arabic</a>
   <a href="#contact">Contact</a>
+
+  <!-- ---------- قسم إدخال فيديو جديد ---------- -->
+  <h2>Add New Video</h2>
+  <input type="text" id="newVideoTitle" placeholder="Video Title">
+  <input type="text" id="newVideoURL" placeholder="YouTube Video URL">
+  <button onclick="addVideo()">Add Video</button>
 </div>
 
-<!-- المحتوى الرئيسي -->
+<!-- ---------- Main content ---------- -->
 <main>
-<!-- الهيدر مع الشعار -->
 <header>
   <img src="logo.png" alt="Spoken Arabic Now Logo">
   <div>
@@ -162,14 +181,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- قسم التعريف عن الموقع -->
+<!-- ---------- About Section ---------- -->
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
-<!-- قسم الدروس -->
+<!-- ---------- Lessons Section ---------- -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -188,11 +207,11 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- قسم الفيديوهات -->
+<!-- ---------- Video Lessons Section ---------- -->
 <section id="videos">
   <h2>Video Lessons</h2>
-  <div class="videos">
-    <!-- هنا تضيف فيديوهات يدوياً -->
+  <div class="videos" id="videoContainer">
+    <!-- فيديوهات موجودة مسبقًا -->
     <div class="box">
       <h3>Lesson 1: Mind your own business</h3>
       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
@@ -236,7 +255,7 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- قسم الموارد القابلة للتحميل -->
+<!-- ---------- Resources Section ---------- -->
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -253,14 +272,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- قسم اللغة المصرية -->
+<!-- ---------- Egyptian Arabic Section ---------- -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
-<!-- قسم الاتصال -->
+<!-- ---------- Contact Section ---------- -->
 <section id="contact">
   <h2>Contact</h2>
   <p>
@@ -269,17 +288,56 @@ footer a { color:#1976d2; text-decoration:none; }
   </p>
 </section>
 
-<!-- الفوتر -->
+<!-- ---------- Footer ---------- -->
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
 </main>
+
+<!-- ---------- JavaScript لإضافة الفيديوهات ديناميكيًا ---------- -->
+<script>
+function addVideo() {
+  const title = document.getElementById('newVideoTitle').value.trim();
+  const url = document.getElementById('newVideoURL').value.trim();
+
+  if(title === '' || url === '') {
+    alert('Please enter both video title and URL!');
+    return;
+  }
+
+  // استخراج كود الفيديو من رابط YouTube
+  let videoId = '';
+  if(url.includes('youtu.be/')) {
+    videoId = url.split('youtu.be/')[1];
+  } else if(url.includes('youtube.com/watch?v=')) {
+    videoId = url.split('v=')[1];
+  } else if(url.includes('youtube.com/embed/')) {
+    videoId = url.split('embed/')[1];
+  } else {
+    alert('Invalid YouTube URL!');
+    return;
+  }
+
+  // إزالة أي معلمات إضافية بعد & أو ?
+  videoId = videoId.split('&')[0].split('?')[0];
+
+  // إنشاء صندوق الفيديو الجديد
+  const container = document.getElementById('videoContainer');
+  const box = document.createElement('div');
+  box.className = 'box';
+  box.innerHTML = `
+    <h3>${title}</h3>
+    <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
+    <a class="button" href="https://www.youtube.com/watch?v=${videoId}" target="_blank">Watch on YouTube</a>
+  `;
+  container.appendChild(box);
+
+  // إعادة تعيين الحقول
+  document.getElementById('newVideoTitle').value = '';
+  document.getElementById('newVideoURL').value = '';
+}
+</script>
+
 </body>
 </html>
-
-
-
-
-
-
