--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
-/* --------- Reset --------- */
+/* --- القواعد العامة --- */
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
@@ -17,9 +17,9 @@ body {
   min-height:100vh;
 }
 
-/* --------- Sidebar --------- */
+/* --- القائمة الجانبية --- */
 .sidebar {
-  width: 280px;
+  width: 250px;
   background: #1e1e1e;
   color: #fff;
   flex-shrink:0;
@@ -45,24 +45,7 @@ body {
 }
 .sidebar a:hover { color:#1976d2; }
 
-/* --------- Input Video Section --------- */
-.sidebar input, .sidebar button {
-  width: 100%;
-  padding:8px 10px;
-  margin-bottom:10px;
-  border-radius:5px;
-  border:none;
-}
-.sidebar button {
-  background-color:#1976d2;
-  color:#fff;
-  font-weight:bold;
-  cursor:pointer;
-  transition: background-color 0.3s ease;
-}
-.sidebar button:hover { background-color:#0d47a1; }
-
-/* --------- Main Content --------- */
+/* --- المحتوى الرئيسي --- */
 main {
   flex-grow:1;
   padding:20px 40px;
@@ -70,7 +53,7 @@ main {
   margin:auto;
 }
 
-/* --------- Header --------- */
+/* --- الرأس (Header) --- */
 header {
   display:flex;
   align-items:center;
@@ -87,7 +70,7 @@ header img {
 header div h1 { font-size:2.8rem; color:#0d47a1; margin-bottom:10px; }
 header div p { font-size:1.3rem; }
 
-/* --------- Sections --------- */
+/* --- الأقسام --- */
 section { margin-bottom:60px; }
 section h2 {
   color: #1976d2;
@@ -98,7 +81,7 @@ section h2 {
   padding-bottom:5px;
 }
 
-/* --------- Boxes --------- */
+/* --- الصناديق --- */
 .features, .videos, .resources {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
@@ -134,7 +117,7 @@ section h2 {
 
 iframe { width:100%; height:315px; border-radius:12px; }
 
-/* --------- Footer --------- */
+/* --- Footer --- */
 footer {
   background: #1e1e1e;
   color: #fff;
@@ -144,6 +127,7 @@ footer {
 }
 footer a { color:#1976d2; text-decoration:none; }
 
+/* --- استجابة للشاشات الصغيرة --- */
 @media(max-width:992px){
   body { flex-direction:column; }
   .sidebar { width:100%; height:auto; position:relative; }
@@ -154,7 +138,7 @@ footer a { color:#1976d2; text-decoration:none; }
 </head>
 <body>
 
-<!-- ---------- Sidebar ---------- -->
+<!-- القائمة الجانبية -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -163,15 +147,14 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#resources">Resources</a>
   <a href="#egyptian">Egyptian Arabic</a>
   <a href="#contact">Contact</a>
-
-  <!-- ---------- قسم إدخال فيديو جديد ---------- -->
+  <!-- --- قسم إضافة فيديو جديد --- -->
   <h2>Add New Video</h2>
-  <input type="text" id="newVideoTitle" placeholder="Video Title">
-  <input type="text" id="newVideoURL" placeholder="YouTube Video URL">
-  <button onclick="addVideo()">Add Video</button>
+  <input type="text" id="videoTitle" placeholder="Video Title" style="width:100%; margin-bottom:8px; padding:5px;">
+  <input type="text" id="videoURL" placeholder="YouTube URL" style="width:100%; margin-bottom:8px; padding:5px;">
+  <button onclick="addVideo()" style="width:100%; padding:8px; background:#1976d2; color:white; border:none; border-radius:5px; cursor:pointer;">Add Video</button>
 </div>
 
-<!-- ---------- Main content ---------- -->
+<!-- المحتوى الرئيسي -->
 <main>
 <header>
   <img src="logo.png" alt="Spoken Arabic Now Logo">
@@ -181,14 +164,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- ---------- About Section ---------- -->
+<!-- قسم حول الموقع -->
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
-<!-- ---------- Lessons Section ---------- -->
+<!-- قسم الدروس -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -207,11 +190,11 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- ---------- Video Lessons Section ---------- -->
+<!-- قسم الفيديوهات -->
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoContainer">
-    <!-- فيديوهات موجودة مسبقًا -->
+    <!-- فيديوهات موجودة يدويًا -->
     <div class="box">
       <h3>Lesson 1: Mind your own business</h3>
       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
@@ -227,35 +210,10 @@ footer a { color:#1976d2; text-decoration:none; }
       <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
     </div>
-    <div class="box">
-      <h3>Lesson 4: Now way!, Holy cow</h3>
-      <iframe src="https://www.youtube.com/embed/75DuYX3lNFw" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/75DuYX3lNFw" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 5: I am so done with this</h3>
-      <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/_fVm-Vwdr8k" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 6: Essential Phrases for Foreigners at Arab Airports – Part 01</h3>
-      <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/_n0iZjkTZQI" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 7: Essential Phrases for Foreigners at Arab Airports – Part 02</h3>
-      <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 8: Essential Phrases for Foreigners at Arab Airports – Part 03</h3>
-      <iframe src="https://www.youtube.com/embed/5dziHaKjj_g" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/watch?v=5dziHaKjj_g" target="_blank">Watch on YouTube</a>
-    </div>
   </div>
 </section>
 
-<!-- ---------- Resources Section ---------- -->
+<!-- قسم الموارد -->
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -272,70 +230,72 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- ---------- Egyptian Arabic Section ---------- -->
+<!-- قسم اللغة المصرية -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
-<!-- ---------- Contact Section ---------- -->
+<!-- قسم الاتصال -->
 <section id="contact">
   <h2>Contact</h2>
   <p>
-    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br>
     Email: spokenarabicnow@gmail.com
   </p>
 </section>
 
-<!-- ---------- Footer ---------- -->
+<!-- Footer -->
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
 </main>
 
-<!-- ---------- JavaScript لإضافة الفيديوهات ديناميكيًا ---------- -->
 <script>
+/* --- دالة لإضافة فيديو جديد تلقائيًا --- */
 function addVideo() {
-  const title = document.getElementById('newVideoTitle').value.trim();
-  const url = document.getElementById('newVideoURL').value.trim();
+  const title = document.getElementById('videoTitle').value.trim();
+  const url = document.getElementById('videoURL').value.trim();
 
-  if(title === '' || url === '') {
-    alert('Please enter both video title and URL!');
+  if(!title || !url) {
+    alert('Please enter both title and YouTube URL!');
     return;
   }
 
-  // استخراج كود الفيديو من رابط YouTube
+  // --- استخراج Video ID من أي رابط YouTube ---
   let videoId = '';
-  if(url.includes('youtu.be/')) {
-    videoId = url.split('youtu.be/')[1];
-  } else if(url.includes('youtube.com/watch?v=')) {
-    videoId = url.split('v=')[1];
-  } else if(url.includes('youtube.com/embed/')) {
-    videoId = url.split('embed/')[1];
-  } else {
+  try {
+    const shortMatch = url.match(/youtu\.be\/([^\?&]+)/);
+    const watchMatch = url.match(/v=([^\?&]+)/);
+    const shortsMatch = url.match(/shorts\/([^\?&]+)/);
+
+    if(shortMatch) videoId = shortMatch[1];
+    else if(watchMatch) videoId = watchMatch[1];
+    else if(shortsMatch) videoId = shortsMatch[1];
+    else { alert('Invalid YouTube URL!'); return; }
+  } catch(e) {
     alert('Invalid YouTube URL!');
     return;
   }
 
-  // إزالة أي معلمات إضافية بعد & أو ?
-  videoId = videoId.split('&')[0].split('?')[0];
-
-  // إنشاء صندوق الفيديو الجديد
+  // --- إنشاء عنصر فيديو جديد ---
   const container = document.getElementById('videoContainer');
   const box = document.createElement('div');
   box.className = 'box';
+
   box.innerHTML = `
     <h3>${title}</h3>
     <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
-    <a class="button" href="https://www.youtube.com/watch?v=${videoId}" target="_blank">Watch on YouTube</a>
+    <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
   `;
+
   container.appendChild(box);
 
-  // إعادة تعيين الحقول
-  document.getElementById('newVideoTitle').value = '';
-  document.getElementById('newVideoURL').value = '';
+  // --- مسح الحقول بعد الإضافة ---
+  document.getElementById('videoTitle').value = '';
+  document.getElementById('videoURL').value = '';
 }
 </script>
 
