--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
-/* --- القواعد العامة --- */
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
@@ -17,7 +16,7 @@ body {
   min-height:100vh;
 }
 
-/* --- القائمة الجانبية --- */
+/* Sidebar - القائمة الجانبية */
 .sidebar {
   width: 250px;
   background: #1e1e1e;
@@ -45,7 +44,7 @@ body {
 }
 .sidebar a:hover { color:#1976d2; }
 
-/* --- المحتوى الرئيسي --- */
+/* Main content - المحتوى الرئيسي */
 main {
   flex-grow:1;
   padding:20px 40px;
@@ -53,7 +52,7 @@ main {
   margin:auto;
 }
 
-/* --- الرأس (Header) --- */
+/* Header */
 header {
   display:flex;
   align-items:center;
@@ -70,7 +69,7 @@ header img {
 header div h1 { font-size:2.8rem; color:#0d47a1; margin-bottom:10px; }
 header div p { font-size:1.3rem; }
 
-/* --- الأقسام --- */
+/* Sections */
 section { margin-bottom:60px; }
 section h2 {
   color: #1976d2;
@@ -81,7 +80,7 @@ section h2 {
   padding-bottom:5px;
 }
 
-/* --- الصناديق --- */
+/* Boxes for features, videos, resources */
 .features, .videos, .resources {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
@@ -96,6 +95,7 @@ section h2 {
   display:flex;
   flex-direction:column;
   justify-content:space-between;
+  position:relative;
 }
 .box:hover {
   transform: translateY(-6px);
@@ -115,9 +115,22 @@ section h2 {
 }
 .box a.button:hover { background-color:#0d47a1; }
 
+/* زر الحذف */
+.delete-button {
+  background-color:#e74c3c;
+  color:#fff;
+  border:none;
+  padding:8px 12px;
+  border-radius:6px;
+  cursor:pointer;
+  font-weight:bold;
+  margin-top:10px;
+}
+.delete-button:hover { background-color:#c0392b; }
+
 iframe { width:100%; height:315px; border-radius:12px; }
 
-/* --- Footer --- */
+/* Footer */
 footer {
   background: #1e1e1e;
   color: #fff;
@@ -127,7 +140,7 @@ footer {
 }
 footer a { color:#1976d2; text-decoration:none; }
 
-/* --- استجابة للشاشات الصغيرة --- */
+/* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
   .sidebar { width:100%; height:auto; position:relative; }
@@ -138,7 +151,7 @@ footer a { color:#1976d2; text-decoration:none; }
 </head>
 <body>
 
-<!-- القائمة الجانبية -->
+<!-- Sidebar -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -147,14 +160,15 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#resources">Resources</a>
   <a href="#egyptian">Egyptian Arabic</a>
   <a href="#contact">Contact</a>
-  <!-- --- قسم إضافة فيديو جديد --- -->
+
+  <!-- قسم إضافة فيديو جديد -->
   <h2>Add New Video</h2>
-  <input type="text" id="videoTitle" placeholder="Video Title" style="width:100%; margin-bottom:8px; padding:5px;">
-  <input type="text" id="videoURL" placeholder="YouTube URL" style="width:100%; margin-bottom:8px; padding:5px;">
-  <button onclick="addVideo()" style="width:100%; padding:8px; background:#1976d2; color:white; border:none; border-radius:5px; cursor:pointer;">Add Video</button>
+  <input type="text" id="newVideoTitle" placeholder="Enter Video Title" style="width:100%; margin-bottom:8px; padding:5px;">
+  <input type="text" id="newVideoURL" placeholder="Enter YouTube URL" style="width:100%; margin-bottom:8px; padding:5px;">
+  <button id="addVideoBtn" style="width:100%; padding:10px; background:#1976d2; color:white; border:none; border-radius:6px; cursor:pointer;">Add Video</button>
 </div>
 
-<!-- المحتوى الرئيسي -->
+<!-- Main content -->
 <main>
 <header>
   <img src="logo.png" alt="Spoken Arabic Now Logo">
@@ -164,14 +178,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- قسم حول الموقع -->
+<!-- قسم About -->
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
-<!-- قسم الدروس -->
+<!-- قسم Lessons -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -190,26 +204,67 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- قسم الفيديوهات -->
+<!-- قسم Video Lessons -->
 <section id="videos">
   <h2>Video Lessons</h2>
-  <div class="videos" id="videoContainer">
-    <!-- فيديوهات موجودة يدويًا -->
+  <div class="videos" id="videosContainer">
+    <!-- الفيديوهات الموجودة مسبقًا -->
     <div class="box">
       <h3>Lesson 1: Mind your own business</h3>
       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
     </div>
+
     <div class="box">
       <h3>Lesson 2: You Command – I’m at Your Service</h3>
       <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
     </div>
+
     <div class="box">
       <h3>Lesson 3: Stop Showing Off</h3>
       <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
     </div>
+
+    <div class="box">
+      <h3>Lesson 4: Now way!, Holy cow</h3>
+      <iframe src="https://www.youtube.com/embed/75DuYX3lNFw" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/75DuYX3lNFw" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
+    </div>
+
+    <div class="box">
+      <h3>Lesson 5: I am so done with this</h3>
+      <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/_fVm-Vwdr8k" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
+    </div>
+
+    <div class="box">
+      <h3>Lesson 6: Essential Phrases for Foreigners at Arab Airports – Part 01</h3>
+      <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/_n0iZjkTZQI" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
+    </div>
+
+    <div class="box">
+      <h3>Lesson 7: Essential Phrases for Foreigners at Arab Airports – Part 02</h3>
+      <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
+    </div>
+
+    <div class="box">
+      <h3>Lesson 8: Essential Phrases for Foreigners at Arab Airports – Part 03</h3>
+      <iframe src="https://www.youtube.com/embed/5dziHaKjj_g" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/watch?v=5dziHaKjj_g" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
+    </div>
+
   </div>
 </section>
 
@@ -230,7 +285,7 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- قسم اللغة المصرية -->
+<!-- قسم Egyptian Arabic -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
@@ -241,7 +296,7 @@ footer a { color:#1976d2; text-decoration:none; }
 <section id="contact">
   <h2>Contact</h2>
   <p>
-    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br>
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
     Email: spokenarabicnow@gmail.com
   </p>
 </section>
@@ -253,51 +308,64 @@ footer a { color:#1976d2; text-decoration:none; }
 
 </main>
 
+<!-- سكربت لإضافة وحذف الفيديوهات -->
 <script>
-/* --- دالة لإضافة فيديو جديد تلقائيًا --- */
-function addVideo() {
-  const title = document.getElementById('videoTitle').value.trim();
-  const url = document.getElementById('videoURL').value.trim();
+  const addBtn = document.getElementById('addVideoBtn');
+  const videosContainer = document.getElementById('videosContainer');
 
-  if(!title || !url) {
-    alert('Please enter both title and YouTube URL!');
-    return;
-  }
+  addBtn.addEventListener('click', function() {
+    const title = document.getElementById('newVideoTitle').value.trim();
+    const url = document.getElementById('newVideoURL').value.trim();
 
-  // --- استخراج Video ID من أي رابط YouTube ---
-  let videoId = '';
-  try {
-    const shortMatch = url.match(/youtu\.be\/([^\?&]+)/);
-    const watchMatch = url.match(/v=([^\?&]+)/);
-    const shortsMatch = url.match(/shorts\/([^\?&]+)/);
+    if(title === '' || url === '') {
+      alert('Please enter both title and URL');
+      return;
+    }
 
-    if(shortMatch) videoId = shortMatch[1];
-    else if(watchMatch) videoId = watchMatch[1];
-    else if(shortsMatch) videoId = shortsMatch[1];
-    else { alert('Invalid YouTube URL!'); return; }
-  } catch(e) {
-    alert('Invalid YouTube URL!');
-    return;
-  }
+    // تحويل الرابط لأي صيغة YouTube embed صحيحة
+    let videoId = '';
+    if(url.includes('youtube.com/watch')) {
+      const params = new URL(url).searchParams;
+      videoId = params.get('v');
+    } else if(url.includes('youtu.be/')) {
+      videoId = url.split('youtu.be/')[1].split('?')[0];
+    } else if(url.includes('youtube.com/shorts/')) {
+      videoId = url.split('shorts/')[1].split('?')[0];
+    } else {
+      alert('Invalid YouTube URL!');
+      return;
+    }
 
-  // --- إنشاء عنصر فيديو جديد ---
-  const container = document.getElementById('videoContainer');
-  const box = document.createElement('div');
-  box.className = 'box';
+    // إنشاء صندوق الفيديو الجديد
+    const box = document.createElement('div');
+    box.className = 'box';
+    box.innerHTML = `
+      <h3>${title}</h3>
+      <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
+      <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
+      <button class="delete-button">Delete</button>
+    `;
+    videosContainer.appendChild(box);
 
-  box.innerHTML = `
-    <h3>${title}</h3>
-    <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
-    <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
-  `;
+    // تفعيل زر الحذف
+    box.querySelector('.delete-button').addEventListener('click', function() {
+      this.parentElement.remove();
+    });
 
-  container.appendChild(box);
+    // مسح الخانات بعد الإضافة
+    document.getElementById('newVideoTitle').value = '';
+    document.getElementById('newVideoURL').value = '';
+  });
 
-  // --- مسح الحقول بعد الإضافة ---
-  document.getElementById('videoTitle').value = '';
-  document.getElementById('videoURL').value = '';
-}
+  // تفعيل زر الحذف للفيديوهات الموجودة مسبقًا
+  document.querySelectorAll('.delete-button').forEach(btn => {
+    btn.addEventListener('click', function() {
+      this.parentElement.remove();
+    });
+  });
 </script>
 
 </body>
 </html>
+
+
